--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.33.8",
+    "@apollo/subgraph": "^0.1.5",
     "@types/lodash": "^4.14.177",
     "apollo-server-express": "^3.5.0",
     "express": "^4.17.1",
