--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@graphql-codegen/typescript-resolvers": "2.4.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
+    "express-openid-connect": "^2.7.2",
     "nodemon": "^2.0.15",
+    "sequelize-cli-typescript": "^3.2.0-c",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
@@ -29,6 +31,7 @@
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "graphql-import-node": "^0.0.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sequelize": "^6.19.0"
   }
 }
